# Djano_rest_framework

./: pyproject.toml
config/: settings.py  urls.py
lms/: admin.py  models.py
lms/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
