[project]
name = "django-rest-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Ян Харисов",email = "yanhok2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
